# pkgtest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yaml  cicd.yml  cicd.yml_  publish.yml
src/c/: cadd.c
src/pkgtest/: __init__.py  __main__.py  api.py  cli.py  config.py  model.py  services.py
tests/: test_api.py  test_cli.py  test_true.py
