[project]
name = "pkgtest"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "ericaua", email = "erik.ulfhielm@gmail.com" }]
dependencies = ["typer~=0.12.5", "fastapi[standard]~=0.115.2"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
pkgtest = "pkgtest.__main__:main"

[tool.rye.scripts]
lint = "rye lint --fix"
fmt = "rye fmt"
type = "mypy --strict src tests"                  # pyright src tests
test = "pytest tests --quiet"
all = { chain = ["lint", "fmt", "type", "test"] }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit~=4.0.1",
    "pytest~=8.3.3",
    "pyright~=1.1.384",
    "mypy~=1.12.0",
    "python-semantic-release~=9.11.1",
    "pytest-cov~=5.0.0",
]


[tool.semantic_release]
version_variables = ["pyproject.toml:version"]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
addopts = "--cov=pkgtest --cov-report=lcov:lcov.info"

[tool.mypy]
mypy_path = "typings"
