[project]
name = "pkgtest"
dynamic = ["version"]
description = "Add your description here"
authors = [{ name = "ericaua", email = "erik.ulfhielm@gmail.com" }]
dependencies = ["typer~=0.12.5", "fastapi[standard]~=0.115.2"]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
pkgtest = "pkgtest.__main__:main"

[tool.rye.scripts]
lint = "rye lint --fix"
fmt = "rye fmt"
type = "mypy --strict src tests"                                        # pyright src tests
test = "pytest tests --quiet --cov=pkgtest --cov-report=lcov:lcov.info"
all = { chain = ["lint", "fmt", "type", "test"] }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit~=4.0.1",
    "pytest~=8.3.3",
    "pyright~=1.1.384",
    "mypy~=1.12.0",
    "python-semantic-release~=9.11.1",
    "pytest-cov~=5.0.0",
]

[tool.pdm.version]
source = "scm"

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.mypy]
mypy_path = "typings"
